refine the OTA flow
used HD logo previous was blurry

modify platform script to support build arg

Shellhub UI should be accessible inside platform and not on browser window
